--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.10",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.68.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.1.4",
+    "next-sanity": "^9.8.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
+    "sanity": "^3.68.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
