--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.4",
+    "next": "15.0.4",
     "next-sanity": "^9.8.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,7 +28,7 @@
     "sanity": "^3.68.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.15.3",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
