--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-sanity": "^9.8.30",
@@ -30,7 +31,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.15.3",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
